[FIX] *: fix contrast issue with BS5 and Odoo colors
The logic not identical in BS4 -> BS5
The color contrast system in BS5 relies on WCAG 2.0 contrast algo.
So color-yiq is converted to color-contrast.
There are some "texts/buttons/other visuals" elements that the contrast
is not the same as before.

$yiq-text-dark and $yiq-text-light are respectively renamed to
$color-contrast-dark and $color-contrast-light.

--- a/addons/web/static/src/legacy/scss/fields.scss
+++ b/addons/web/static/src/legacy/scss/fields.scss
@@ -264,7 +264,7 @@
                 } @else {
                     &, &::after {
                         background-color: nth($o-colors, $size);
-                        color: color-yiq(nth($o-colors, $size));
+                        color: color-contrast(nth($o-colors, $size));
                     }
                 }
             }
